[package]
authors = ["realityone <realityone@me.com>"]
name = "akarin"
version = "0.1.0"

[dependencies]
error-chain = "0.11.0"
ioctl-sys = "0.5.2"
libc = "0.2.32"
log = "0.3.8"
pretty_env_logger = "0.1.1"
sodiumoxide = "0.0.15"
transient-hashmap = "0.4.0"

[features]
default = ["libsodium"]
libsodium = []
travis-ci = ["tun-test", "default"]
tun-test = []

[target."cfg(unix)".dependencies]
ioctl-sys = "0.5.2"
